--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,8 +1,8 @@
 stages:
   train:
-    cmd: py .\src\3.train_random_forest.py
+    cmd: py .\src\4.train_gradient_boosted.py
     deps:
     - data/creditcard.csv
     metrics:
-    - scores/metricsRF.json:
+    - scores/metricsGB.json:
         cache: false
