--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,6 @@
 stages:
   train:
-    cmd: py .\src\1.train_logistic_regression.py
+    cmd: py .\src\2.train_decision_tree.py
     deps:
     - data/creditcard.csv
     metrics:
