Third model, Random Forest

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,6 @@
 stages:
   train:
-    cmd: py .\src\2.train_decision_tree.py
+    cmd: py .\src\3.train_random_forest.py
     deps:
     - data/creditcard.csv
     metrics:
